# proglang

./: .gitignore  Cargo.toml  LICENSE  example  setup-env  test.c  test.sh
compiler/: Cargo.toml  setup-env
compiler/src/: driver.rs
compiler/src/analysis/: function_collector_pass.rs  return_check_pass.rs  scope_resolution_pass.rs  semantic_analysis.rs  semantic_analysis_pass.rs  type_checker_pass.rs  type_graph_pass.rs
compiler/src/codegen/: codegen_driver.rs  codegen_llvm.rs
compiler/src/mid_ir/: construction.rs  ir.rs
compiler/src/syntax/: ast.rs  lexer.rs  parser.rs  span.rs  token.rs
compiler/src/types/: class_info.rs  function_info.rs  mod.rs  type_system.rs
compiler/tests/: compile  lit.cfg
compiler/tests/class_checker/: cycle_1.pl  cycle_3.pl  unknown_type.pl
compiler/tests/llvm/: bitwise_ops_const.pl  bitwise_ops_shift_generic.pl  direct_call.pl  direct_call_to_void_fun.pl  do_while_loop.pl  do_while_loop_return.pl  if_and_else.pl  indirect_call.pl  indirect_call_to_void_fun.pl  infinite_loop.pl  loop_idiom.pl  named_args.pl  nested_member_access.pl  optional_arguments.pl  return_float.pl  return_int.pl  return_int_bin.pl  return_int_decimal.pl  return_int_hex.pl  return_int_oct.pl  return_or.pl  return_void.pl  simple_member_access_1.pl  while_loop.pl  while_loop_return.pl
compiler/tests/scope_resolution/: unknown_variable.pl
compiler/tests/syntax/: fatal_bin_literal_error.pl  fatal_hex_literal_error.pl  fatal_oct_literal_error.pl  non_fatal_integer_literal_errors.pl
compiler/tests/type_checker/: binary_op_non_numeric.pl  bitwise_bin_op.pl  (+13 more)
(+73 files in other folders)
