[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git", rev = "901644b8142269551a00080dc5345af577b85ff7", features = ["pratt"] }
clap = "^4.3.5"
clap-num = "^1.0.2"
clap_derive = "^4.3.2"
inkwell = { version = "0.6.0", features = ["llvm16-0", "target-x86"] }
rustc-hash = "2.1.1"
smallvec = "^1.10.0"
